--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My Profolio
-subtitle: This is where I will tell my friends way too much about me
+title: Daniel's Profolio
+subtitle: United States Marine and Data Science Student
 use-site-title: true
 ---
 
