--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Daniel's Profolio
+title: Daniel's Porfolio
 subtitle: United States Marine and Data Science Student
 use-site-title: true
 ---
